*******************************************************************************
 
 + = Additions since previous version
 ! = Bug fixes since previous version
 ~ = Changes   since previous version
 - = Features that has been removed

1.9.2 (2011-10-??)
 + Custom map source from ZIP/files in file-system: added possibility to invert
   y coordinate via "invertYCoordinate" like it is used by MapTiler

1.9.1 (2011-09-09) 
 ! Opening settings dialog: ClassCastException on Linux/OpenJDK
 ! Custom SQlite atlas as map source fixed for atlas formats AndNav, 
    BackCountry Navigator and Osmand 
 + Background color for BeanShell map sources can be specified by adding
    backgroundColor = "#ffffff"; 
 ! Custom SQLite atlas as map source had an undefined tileImageType;
    Added auto-detection and user defined <tileImageType> 

1.9 (2011-08-18) 
 ! Calculation problem in MGMaps atlas format (fix by Pierre-Luc Paour)
 ! Custom mapsource from RMaps SQLite atlas shows wrong zoom levels 
 - Removed map source: Open Cycle Map (request by Andy Allan)
 + New map source: OSMapa-Topo (Poland)
 + Map source tile store coverage: button for hiding colored layer added
 + OziExplorer/Trekbuddy: MM1B calculation improved (patch by MrPete #3026830)
 + Custom XML map source: {$serverpart} / <serverParts> implemented for 
    balancing load among multiple servers with different DNS names
 + SQLite library included in MOBAC distribution 

1.9 beta 6 (2011-06-21)
 + New atlas format: Geocaching Live offline maps
 + New atlas format: MBTiles (Experimental)
 + New atlas format: Paper Atlas (PDF) & Paper Atlas (PNG) 
    [provided by Ľubomír Vasek] 
 ! Bug #3316081 - "String index out of range: -1" upon map sources update 
 ! Incorrect selection and tile count calculation 
 + New map source: Moldova (point.md)

1.9 beta 5 (2011-05-17)
 + Added possibility change directory syntax for file and zip based map sources 
    from zoom/x/y to zoom/y/x ("flipXYDir")